# databento-ingest

./: .gitignore  CODEBASE.md  DOWNLOAD_OPERATIONS.md  README.md  pyproject.toml
configs/: credentials.toml.example
configs/datasets/: arcx_pillar_nvda_mbo_2025.toml  equs_mini_regime_bbo1s_2025.toml  equs_mini_regime_ohlcv1s_2025.toml  glbx_es_nq_ohlcv1s_2025.toml  opra_index_spx_spy_cbbo1m_oct_nov2025.toml  opra_index_spx_spy_definition_oct_nov2025.toml  opra_index_spx_spy_statistics_oct_nov2025.toml  opra_nvda_cmbp1_nov2025.toml  opra_nvda_definition_oct_nov2025.toml  opra_nvda_statistics_oct_nov2025.toml  xnas_basic_nvda_cmbp1_2025.toml  xnas_itch_multi10_mbo_2025h2.toml  xnas_itch_regime86_definition_2025.toml  xnas_itch_regime86_imbalance_2025.toml  xnas_itch_regime86_status_2025.toml
src/databento_ingest/: __init__.py  __main__.py  batch.py  cli.py  config.py  downloader.py  manifest.py
tests/: test_config.py  test_downloader.py  test_manifest.py
