[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databento-ingest"
version = "0.2.0"
description = "High-throughput, safety-first data acquisition from Databento via HTTPS"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
api = ["databento"]

[project.scripts]
databento-ingest = "databento_ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
